--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,117 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   /*--------Header & Footer style--------------*/
+   header, footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header .content-wrapper {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-flow:row wrap;
+}
+
+header nav {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content:space-around;
+  align-items:center;
+
+}
+
+header nav ul {
+display:flex;
+justify-content:space-around;
+}
+
+footer .social-icons {
+display:flex;
+justify-content:space-around;
+align-items: flex-start;
+}
+
+
+footer .social-icons p {
+  display:flex;
+  justify-content: center;
+  align-items:center;
+}
+
+   /*--------Hero Area--------------*/
+   .hero-area {
+  display:flex;
+  justify-content: center;
+  flex-flow:row wrap;
+}
+
+   /*--------Aside--------------*/
+
+aside {
+  display:flex;
+  flex-flow: row wrap;
+  justify-content:center;
+  align-items: center;
+}
+
+
+   /*--------Features--------------*/
+
+.features {
+  display:flex;
+  justify-content: center;
+flex-flow:row wrap
+}
+
+.features .features-items {
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+   /*--------Reviews--------------*/
+
+.reviews {
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+   /*--------ABOUT PAGE--------------*/
+.mission {
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items:center;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+   /*--------FAQ PAGE--------------*/
+.faq {
+  flex-flow: row wrap;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.faq .content-wrapper {
+  display:flex;
+  flex-flow: row wrap;
+  justify-content:center;
+  align-items:center;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
