--- a/css/main.css
+++ b/css/main.css
@@ -97,13 +97,57 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/************GENERAL STYLES************/
+html {
+  font-size: 16px;
+}
 
-   /*--------Header & Footer style--------------*/
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  text-align:left;
+}
 
-   .content-wrapper {
+ul,ol {
+  list-style-type:none;  
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size:1.875em;  
+}
+
+h3,h4 {
+  font-family: 'Poppins', sans-serif;
+  margin: 20px 0;
+  font-size:1.125em;
+}
+
+p {
+  font-size:0.875em;
+  line-height:1.285;
+}
+
+img {
+  text-transform:uppercase;
+}
+
+address {
+  font-style:normal;
+}
+
+.content-wrapper {
      width: 90%;
      margin: 50px 0;
    }
+
+   /*--------Header & Footer style--------------*/
+
 
    header, footer {
     display: flex;
