--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   text-align:left;
+color:#e2e3ed;
 }
 
 ul,ol {
@@ -119,7 +120,9 @@ a {
 
 h2 {
   font-family: 'Poppins', sans-serif;
-  font-size:1.875em;  
+  font-size:1.875em;
+  font-weight:500;
+  margin: 20px 0;
 }
 
 h3,h4 {
@@ -133,12 +136,34 @@ p {
   line-height:1.285;
 }
 
-img {
-  text-transform:uppercase;
-}
-
 address {
   font-style:normal;
+}
+
+aside .form {
+  margin-top:30px;
+}
+
+input[type=text] {
+  box-sizing:border-box;
+  width:100%;
+  color: #2a423a;
+  font-style:italic;
+  padding:1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight:500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border:none;
+  text-align:center;
+  text-transform:uppercase;
 }
 
 .content-wrapper {
