--- a/css/main.css
+++ b/css/main.css
@@ -122,17 +122,17 @@ h2 {
   font-family: 'Poppins', sans-serif;
   font-size:1.875em;
   font-weight:500;
-  margin: 20px 0;
 }
 
 h3,h4 {
   font-family: 'Poppins', sans-serif;
   margin: 20px 0;
+  font-weight:500;
   font-size:1.125em;
 }
 
 p {
-  font-size:0.875em;
+  font-size: 0.875em;
   line-height:1.285;
 }
 
@@ -140,9 +140,129 @@ address {
   font-style:normal;
 }
 
-aside .form {
-  margin-top:30px;
+.content-wrapper {
+     width: 90%;
+     margin: 50px 0;
+   }
+
+   /*----------------Header & Footer style--------------*/
+
+
+header, footer {
+    background-color:#202322;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
+header {
+  padding: 15px 0;
 }
+
+header .content-wrapper {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-flow:row wrap;
+  margin: 0;
+}
+
+.header-divider {
+  background: #3a3a3a;
+  height: 1px;
+  width: 100%;
+  margin: 10px 0 20px 0;
+}
+
+header nav {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content:space-around;
+  align-items:center;
+  width: 60%;
+  font-size:1.125em;
+  font-weight:700;
+  text-transform:uppercase;
+
+}
+
+header nav ul {
+  display:flex;
+  justify-content:space-around;
+  width: 100%;
+  }
+
+header nav ul li {
+  font-size: 1.125em;
+}
+
+  footer {
+    text-align:center;
+    flex-direction: column;
+  }
+
+  footer p {
+    margin: 0;
+  }
+
+
+  footer .content-wrapper {
+    width: 55%;
+    margin: 50px 0;
+  }
+
+footer .contact {
+  margin-bottom: 50px;
+}
+
+footer .social-icons {
+display:flex;
+justify-content:space-around;
+align-items: center;
+}
+
+footer .social-icons p {
+  display:flex;
+  justify-content: center;
+  align-items:center;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+/* -------------------- Mobile Styles - Homepage -------------------- */
+
+
+   /*--------Hero Area--------------*/
+   .hero-area {
+  display:flex;
+  justify-content: center;
+  flex-flow:row wrap;
+}
+
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight:500;
+  line-height:1.2;
+}
+
+   /*--------Aside--------------*/
+
+aside {
+  background-color:#527158;
+  display:flex;
+  flex-flow: row wrap;
+  justify-content:center;
+  align-items: center;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+
 
 input[type=text] {
   box-sizing:border-box;
@@ -165,104 +285,6 @@ input[type=button] {
   text-align:center;
   text-transform:uppercase;
 }
-
-.content-wrapper {
-     width: 90%;
-     margin: 50px 0;
-   }
-
-   /*--------Header & Footer style--------------*/
-
-
-   header, footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-
-header {
-  padding: 15px 0;
-}
-
-header .content-wrapper {
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-flow:row wrap;
-  margin: 0;
-}
-
-.header-divider {
-  width: 100%;
-  height: 1px;
-  margin: 10px 0 20px 0;
-}
-
-header nav {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content:space-around;
-  align-items:center;
-  width: 60%;
-}
-
-header nav ul {
-  display:flex;
-  justify-content:space-around;
-  width: 100%;
-  }
-
-  footer {
-    flex-direction: column;
-  }
-
-  footer p {
-    margin: 0;
-  }
-
-
-  footer .content-wrapper {
-    width: 55%;
-    margin: 50px 0;
-  }
-
-footer .contact {
-  margin-bottom: 50px;
-}
-
-footer .social-icons {
-display:flex;
-justify-content:space-around;
-align-items: flex-start;
-}
-
-footer .social-icons p {
-  display:flex;
-  justify-content: center;
-  align-items:center;
-}
-
-footer .copyright {
-  margin: 20px 0;
-}
-
-   /*--------Hero Area--------------*/
-   .hero-area {
-  display:flex;
-  justify-content: center;
-  flex-flow:row wrap;
-}
-
-   /*--------Aside--------------*/
-
-aside {
-  display:flex;
-  flex-flow: row wrap;
-  justify-content:center;
-  align-items: center;
-}
-
 
    /*--------Features--------------*/
 
@@ -289,6 +311,7 @@ flex-flow:row wrap;
 }
 
 .features p {
+  text-align:center;
   margin: 0;
 }
 
@@ -296,6 +319,7 @@ flex-flow:row wrap;
    /*--------Reviews--------------*/
 
 .reviews {
+  background-color:#2a423a;
   display:flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -303,16 +327,18 @@ flex-flow:row wrap;
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
-  width: 55%;
+  width:55%;
   margin: 20px 0;
 }
 
    /*--------ABOUT PAGE--------------*/
 
    .mission {
+  background-color: #527158;
   display:flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -320,6 +346,7 @@ flex-flow:row wrap;
 }
 
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -333,6 +360,7 @@ flex-flow:row wrap;
 
    /*--------FAQ PAGE--------------*/
 .faq {
+  background-color: #527158;
   flex-flow: row wrap;
   display:flex;
   justify-content:center;
@@ -349,12 +377,16 @@ flex-flow:row wrap;
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height:1;
 }
 
 .faq-content {
   margin-bottom: 50px;
 }
 
+.faq-content h4 {
+  line-height:1.333;
+}
 
 /* ==========================================================================
    Helper classes
@@ -453,6 +485,17 @@ flex-flow:row wrap;
     margin: 100px 0;
   }
 
+  h2 {
+    font-size:2.25em;
+    line-height:1.3;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height:1.25;
+  }
+
+  
 /*Header*/
 header {
     justify-content: space-around;
@@ -463,9 +506,9 @@ header .content-wrapper {
   width: 100%;
   justify-content: space-between;
   }
-
+  
 header nav {
-    width: 20%;
+    width:20%;
   }
 
 header nav ul{
@@ -476,6 +519,14 @@ header nav ul{
     display: none;
   }
 
+/*Hero Area*/
+.hero-area h1 {
+  font-size: 3em;
+  line-height:1;
+  margin: 0;
+}
+
+/*Aside*/
   aside .content-wrapper {
     margin: 50px 0;
     display: flex;
@@ -489,6 +540,10 @@ aside .content-wrapper .form {
     margin: 0;
   }
 
+  /*features*/
+  .features h2 {
+    margin-bottom: 20px;
+  }
 .features article {
     display: flex;
     justify-content:center;
@@ -498,36 +553,60 @@ aside .content-wrapper .form {
   }
 
 .features .features-item-description {
-    width: 50%;
+    width: 62%;
   }
 
+  /*Reviews*/
 .reviews article {
     display:flex;
     justify-content:space-between;
   }
 
+.reviews h2 {
+  width: 85%;
+}
+
 .reviews article div {
-    width: 49%;
-  }
+  width:49%;
+}
+
+.reviews h3 {
+  width:75%;
+  margin: 0;
+}
+
+/*footer*/
 
 footer .content-wrapper {
     width: 65%;
     margin: 100px 0;
   }
-.footer-content {
+
+  footer .footer-content{
     display:flex;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
+    flex-direction: row;
   }
 
 footer .contact {
     margin-bottom: 0;
   }
 
+footer h4 {
+  font-size:1.5em;
+  margin-bottom: 40px;
+}
+
+footer p {
+  font-size: 1.285;
+}
+
 footer .copyright {
     width: 100%;
   }
 
+  /*About*/
 .mission-content {
     display:flex;
     justify-content:space-between;
@@ -549,6 +628,11 @@ footer .copyright {
     align-items: flex-start;
   }
 
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
+/*FAQ*/
 .faq .content-wrapper {
     justify-content:space-between;
   }
@@ -560,17 +644,42 @@ footer .copyright {
 .faq h2 {
     width: 100%;
   }
+
+  .faq h4, .faq p {
+    font-size: 0.875em;
+    line-height: 1.125;
+  }
 }
 
 
 @media only screen and (min-width: 1200px) {
 /*Desktop styles here*/
-  .content-wrapper {
+
+header {
+  padding: 15px 0;
+}
+
+.content-wrapper {
     max-width: 960px;
   }
 
+h2 {
+  font-size: 2.25em;
+}
+
+  h3,
+  h4 {
+      font-size: 1.875em;
+  }
+
+  p {
+      font-size: 1.125em;
+      line-height: 1.333;
+  }
+  
  /*Hero*/
   .hero-area h1 {
+    font-size:3.75em;
     width: 60%;
   }
 
@@ -583,30 +692,50 @@ footer .copyright {
   aside .content-wrapper .form {
     width: 30%;
   }
+
+  .form-description p {
+    font-size: 1.125em;
+  }
   
 /*Features*/
+
   .features h2 {
     width: 90%;
   }
   .features article {
-    flex-basis:30%;
+    flex-basis:33%;
   }
 
 /*Reviews*/
+.reviews h2 {
+  padding-bottom: 50px;
+}
+
   .reviews article div {
     width: 42%;
   }
-}
+
+  footer h4 {
+    font-size: 1.875em;
+  }
 
 /****************ABOUT****************/
 .mission h2, .contact-section .content-wrapper h2 {
-  width:90%;
+  width:95%;
+  font-size: 3em;
 }
 
 /****************FAQ****************/
 .faq h2 {
   width:100%;
+  font-size:3em;
 } 
+
+.faq h4, .faq p {
+  font-size: 1.125em;
+  line-height: 1;
+ }
+}
 
 /* ==========================================================================
    Print styles.
