--- a/css/main.css
+++ b/css/main.css
@@ -103,14 +103,14 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+  color:#e2e3ed;
   text-align:left;
-color:#e2e3ed;
 }
 
 ul,ol {
-  list-style-type:none;  
+  list-style-type:none;
 }
 
 a {
@@ -120,8 +120,8 @@ a {
 
 h2 {
   font-family: 'Poppins', sans-serif;
-  font-size:1.875em;
   font-weight:500;
+  font-size:1.875em;
 }
 
 h3,h4 {
@@ -136,8 +136,16 @@ p {
   line-height:1.285;
 }
 
+img {
+ width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
 address {
-  font-style:normal;
+  font-style: normal;
 }
 
 .content-wrapper {
@@ -145,13 +153,6 @@ address {
      margin: 50px 0;
    }
 
-   img {
-    width: 100%;
-  }
-  
-  figure {
-    margin: 0;
-  }
    /*----------------Base Header & Footer style--------------*/
 
 
@@ -168,11 +169,11 @@ header {
 }
 
 header .content-wrapper {
+  margin: 0;
   display:flex;
   justify-content:center;
   align-items:center;
   flex-flow:row wrap;
-  margin: 0;
 }
 
 header figure {
@@ -191,21 +192,20 @@ header figure {
 }
 
 header nav {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content:space-around;
-  align-items:center;
   width: 60%;
   font-size:1.125em;
   font-weight:700;
   text-transform:uppercase;
-
+  display: flex;
+  justify-content:space-around;
+  align-items:center;
+  flex-flow: row wrap;
 }
 
 header nav ul {
+  width: 100%;
   display:flex;
   justify-content:space-around;
-  width: 100%;
   }
 
 header nav ul li {
@@ -252,13 +252,13 @@ footer .copyright {
 
    /*--------Hero Area--------------*/
    .hero-area {
-  display:flex;
-  justify-content: center;
-  flex-flow:row wrap;
-  background:url('../img/hero.jpg');
-  background-size: cover;
-  background-position:center;
-  min-height:500px;
+     background:url('../img/hero.jpg');
+     background-size: cover;
+     background-position:center;
+     min-height:500px;
+     display:flex;
+     justify-content: center;
+     flex-flow:row wrap;
 }
 
 .hero-area h1 {
@@ -273,9 +273,9 @@ footer .copyright {
 aside {
   background-color:#527158;
   display:flex;
-  flex-flow: row wrap;
   justify-content:center;
   align-items: center;
+  flex-flow: row wrap;
 }
 
 aside .form {
@@ -308,12 +308,12 @@ input[type=button] {
    /*--------Features--------------*/
 
 .features {
-  display:flex;
-  justify-content: center;
-  flex-flow:row wrap;
   background: url(../img/features.jpg);
   background-size:cover;
   background-position:cover;
+  display:flex;
+  justify-content: center;
+  flex-flow:row wrap;
 }
 
 .features h2 {
@@ -327,9 +327,9 @@ input[type=button] {
 
 .features .features-items {
   display:flex;
-  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+  flex-flow: row wrap;
 }
 
 .features p {
@@ -343,8 +343,8 @@ input[type=button] {
 .reviews {
   background-color:#2a423a;
   display:flex;
+  justify-content: center;
   flex-flow: row wrap;
-  justify-content: center;  
 }
 
 .reviews h2 {
@@ -362,9 +362,9 @@ input[type=button] {
    .mission {
   background-color: #527158;
   display:flex;
-  flex-flow: row wrap;
   justify-content: center;
   align-items:center;
+  flex-flow: row wrap;
 }
 
 .contact-section {
@@ -383,18 +383,18 @@ input[type=button] {
    /*--------FAQ PAGE--------------*/
 .faq {
   background-color: #527158;
-  flex-flow: row wrap;
   display:flex;
   justify-content:center;
   align-items:center;
+  flex-flow: row wrap;
 }
 
 .faq .content-wrapper {
   margin: 50px 0 0 0;
   display:flex;
-  flex-flow: row wrap;
   justify-content:center;
   align-items:center;
+  flex-flow: row wrap;
 }
 
 .faq h2 {
@@ -487,7 +487,7 @@ input[type=button] {
    display: table;
    /* 2 */
  }
- 
+
  .clearfix:after {
    clear: both;
  }
@@ -509,7 +509,7 @@ input[type=button] {
 
   h2 {
     font-size:2.25em;
-    line-height:1.3;
+    line-height:1.333;
   }
 
   h3 {
@@ -517,7 +517,7 @@ input[type=button] {
     line-height:1.25;
   }
 
-  
+
 /*Header*/
 header {
     justify-content: space-around;
@@ -528,7 +528,11 @@ header .content-wrapper {
   width: 100%;
   justify-content: space-between;
   }
-  
+
+  header figure {
+    width: 30%;
+  }
+
 header nav {
     width:20%;
   }
@@ -541,11 +545,12 @@ header nav ul{
     display: none;
   }
 
-  header figure {
-    width: 30%;
-  }
 
 /*Hero Area*/
+.hero-area {
+  min-height: 600px;
+}
+
 .hero-area h1 {
   font-size: 3em;
   line-height:1;
@@ -556,7 +561,7 @@ header nav ul{
   aside .content-wrapper {
     margin: 50px 0;
     display: flex;
-    justify-content: space-between;      
+    justify-content: space-between;
     flex-flow: row wrap;
     }
 
@@ -597,10 +602,6 @@ aside .content-wrapper .form {
   width:49%;
 }
 
-.reviews article div {
-  width:49%;
-}
-
 .reviews h3 {
   width:75%;
   margin: 0;
@@ -630,7 +631,7 @@ footer h4 {
 }
 
 footer p {
-  font-size: 1.285;
+line-height: 1.285;
 }
 
 footer .copyright {
@@ -707,11 +708,11 @@ h2 {
       font-size: 1.125em;
       line-height: 1.333;
   }
-  
+
  /*Hero*/
   .hero-area h1 {
     font-size:3.75em;
-    width: 60%;
+    width: 80%;
   }
 
  /*Aside*/
@@ -727,28 +728,25 @@ h2 {
   .form-description p {
     font-size: 1.125em;
   }
-  
+
 /*Features*/
 
   .features h2 {
     width: 90%;
   }
+
   .features article {
     flex-basis:33%;
   }
 
 /*Reviews*/
+.reviews article div {
+  width: 42%;
+}
+
 .reviews h2 {
   padding-bottom: 50px;
 }
-
-  .reviews article div {
-    width: 42%;
-  }
-
-  .reviews h2 {
-    padding-bottom: 50px;
-  }
 
   footer h4 {
     font-size: 1.875em;
@@ -760,11 +758,15 @@ h2 {
   font-size: 3em;
 }
 
+.contact-content h4 {
+  font-size: 1.875em;
+}
+
 /****************FAQ****************/
 .faq h2 {
   width:100%;
   font-size:3em;
-} 
+}
 
 .faq h4, .faq p {
   font-size: 1.125em;
