made map responsive

--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,21 @@ input[type=button] {
   margin: 0;
 }
 
+.map figure {
+  width:100%;
+  height:0;
+  padding-bottom: 125%;
+  overflow:hidden;
+  position:relative;
+}
+
+.map iframe {
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0;
+  left:0;
+}
    /*--------FAQ PAGE--------------*/
 .faq {
   background-color: #527158;
@@ -664,6 +679,10 @@ footer .copyright {
     font-size: 1.5em;
   }
 
+  .map figure {
+  padding-bottom: 45.5%;
+}
+
 /*FAQ*/
 .faq .content-wrapper {
     justify-content:space-between;
@@ -761,6 +780,11 @@ h2 {
 .contact-content h4 {
   font-size: 1.875em;
 }
+
+.map figure {
+  padding-bottom: 38%;
+}
+
 
 /****************FAQ****************/
 .faq h2 {
